# libcyberiadamlpp

./: .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md  cyberiadamlpp-config.cmake.in  cyberiadamlpp.cpp  cyberiadamlpp.h  main.cpp  run-mem-tests.sh  run-tests.sh  test.cpp
tests/: 01-empty-doc-except.cpp  01-empty-doc-except.test  02-empty-doc-valid.cpp  02-empty-doc-valid.test  02-output.graphml  03-empty-doc-meta.cpp  03-empty-doc-meta.test  03-output.graphml  04-output.txt  04-read-meta.cpp  04-read-meta.test  05-change-doc-name.cpp  05-change-doc-name.test  05-output.txt  06-output.graphml  06-output.txt  06-two-statemachines.cpp  06-two-statemachines.test  07-output.graphml  07-output.txt  07-single-state.cpp  07-single-state.test  07-single-state.test.graphml  07-single-state.test.txt  08-output.graphml  08-output.txt  08-state-hierarchy.cpp  08-state-hierarchy.test  09-initial.cpp  09-initial.test  09-initial.test-input.graphml  09-initial.test-output.graphml  09-output.graphml  09-output.txt  10-final.cpp  10-final.test  10-final.test-output.graphml  10-output.graphml  10-output.txt  11-choice.cpp  (+63 more)
